gap fixed in baisc feature

--- a/src/components/home/concept/BasicFeatures/BasicFeatures.css
+++ b/src/components/home/concept/BasicFeatures/BasicFeatures.css
@@ -14,7 +14,6 @@
 
 .basic-features-page .basic-features-container {
   width: 100%;
-  margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
